# osr.gik

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cuda  Dockerfile.dev  Dockerfile.macos  Dockerfile.windows  LICENSE  README-DOCKER.md  README.md  RELEASE.md  build.ps1  build.sh  config.default.yaml  docker-compose.yml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: build-macos-x86_64.yml  gik-release.yml
.guided/operation/: gik-install-scripts.usage.md  gik-release-ci.usage.md
crates/gik-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/gik-cli/resources/windows/: .gitkeep  gik.rc
crates/gik-cli/src/: cli.rs  main.rs
crates/gik-cli/src/ui/: color.rs  format.rs  mod.rs  progress.rs  style.rs  table.rs
crates/gik-cli/tests/: ask_with_kg_context.rs  golden_ask.rs  integration_flow.rs  kg_extraction_from_bases.rs  kg_store_bootstrap.rs  memory_ask_and_status.rs  memory_metrics_and_prune.rs  release_and_changelog.rs  show_cli.rs
crates/gik-cli/tests/common/: mod.rs
crates/gik-core/: CHANGELOG.md  Cargo.toml  README.md
crates/gik-core/src/: ask.rs  base.rs  commit.rs  config.rs  constants.rs  db_adapter.rs  embedding.rs  embedding_config_bridge.rs  engine.rs  errors.rs  lib.rs  log.rs  model_adapter.rs  query_expansion.rs  reindex.rs  release.rs  reranker.rs  show.rs  stack.rs  staging.rs  status.rs  timeline.rs  types.rs  workspace.rs
crates/gik-core/src/bm25/: index.rs  mod.rs  scorer.rs  storage.rs  tokenizer.rs
crates/gik-core/src/kg/: entities.rs  export.rs  extractor.rs  mod.rs  query.rs  store.rs  sync.rs
crates/gik-core/src/kg/lang/: c_lang.rs  cpp_lang.rs  csharp_lang.rs  css_lang.rs  go_lang.rs  html_lang.rs  java_lang.rs  js_ts_lang.rs  kotlin_lang.rs  markdown_lang.rs  mod.rs  php_lang.rs  python_lang.rs  ruby_lang.rs  rust_lang.rs  sql_lang.rs
crates/gik-core/src/memory/: metrics.rs  mod.rs  pruning.rs
crates/gik-core/src/vector_index/: metadata.rs  mod.rs
crates/gik-db/: CHANGELOG.md  Cargo.toml  README.md
crates/gik-db/src/: error.rs  lib.rs
crates/gik-db/src/kg/: entities.rs  mod.rs  traits.rs
crates/gik-db/src/kg/backend/: lancedb.rs  mod.rs
crates/gik-db/src/vector/: config.rs  metadata.rs  mod.rs  traits.rs
crates/gik-db/src/vector/backend/: lancedb.rs  mod.rs  simple.rs
crates/gik-model/: CHANGELOG.md  Cargo.toml  README.md
crates/gik-model/src/: config.rs  embedding.rs  error.rs  lib.rs  model_locator.rs  reranker.rs
crates/gik-model/tests/: model_locator_integration.rs
crates/gik-utils/: CHANGELOG.md  Cargo.toml  README.md
crates/gik-utils/src/: lib.rs  url.rs
docs/: 0-PRD.md  1-SPEC.md  2-ENTITIES.md  3-CONTRACTS.md  4-COMMANDS.md  5-ARCH.md
docs/prompts/: prompt-test-exploratory.yml
scripts/: SCRIPTS.md  build.ps1  build.sh  gik-build-packages.ps1  gik-build-packages.sh  gik-download-models.sh  install.sh  test-install.ps1  windows-install.ps1
