[package]
name = "gik-cli"
description = "Guided Indexing Kernel – CLI binary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gik"
path = "src/main.rs"

[dependencies]
gik-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# CLI UX dependencies
owo-colors = "4"
comfy-table = "7"
terminal_size = "0.4"
atty = "0.2"
indicatif = "0.17"

[features]
default = []
metal = ["gik-core/metal"]
cuda = ["gik-core/cuda"]

[build-dependencies]
embed-resource = "2.5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
